# tclftd2xx

./: CMakeLists.txt  README  README.md  license.terms  makefile.vc  pkgIndex.tcl.in  rules.vc  tclftd2xx.c  tclftd2xx.rc
cmake/: FindLibFtd2xx.cmake
